# chat

./: .env  Cargo.toml  app.yml  test.rest
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: decoding.pem  encoding.pem  usage.txt
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs
chat_server/src/handlers/: auth.rs  chat.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: mod.rs  user.rs
chat_server/src/utils/: jwt.rs
migrations/: 20240917043818_initial.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: main.rs  sse.rs
src/: config.rs  lib.rs
src/handlers/: auth.rs  messages.rs  mod.rs
