[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.5", features = ["http2", "multipart", "query", "tracing"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
