[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
