[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = { version = "0.12.10" }

serde = { workspace = true }
serde_json = "1.0.128"
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
