[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = { version = "0.12.10" }

serde = { workspace = true }
serde_json = "1.0.128"
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "cors",
    "trace",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.10.0", features = ["serde", "v7"] }
